Separated the logo and the links but needs more corrections on the spacing of the link

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -30,3 +30,8 @@ a {
   color: seashell;
   text-decoration: underline;
 }
+
+nav {
+    text-align: right;
+    flex-grow: 1;
+}
